feat(config): add env variable support to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,11 +18,9 @@ spring.datasource.password=${DB_PASSWORD:a1b2c3d4}
 # update: crea las tablas al arrancar la aplicacion si no existen y las actualiza si existen.
 # validate: valida las tablas al arrancar la aplicacion si existen.
 # none: no crea ni valida las tablas al arrancar la aplicacion.
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${JPA_DDL:create-drop}
 # Habilita transacciones de jpa mientras se renderiza la vista. (true, false)
 spring.jpa.open-in-view = true
-# Configuracion del dialecto de Hibernate para PostgreSQL (https://docs.jboss.org/hibernate/orm/5.4/javadocs/org/hibernate/dialect/package-summary.html)
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 ## Configuracion de la aplicacion
 # Habilita o deshabilita las referencias circulares en la inyeccion de dependencias.
