--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 
+# Establece el puerto del servicio
+server.port=8087
+
+## Configuración de la base de datos
+# Establece la URL de la base de datos
+spring.datasource.url=jdbc:postgresql://localhost:5432/curso_springboot
+# Establece el usuario de la base de datos
+spring.datasource.username=devdb
+# Establece la contraseña de la base de datos
+spring.datasource.password=a1b2c3d4
+
+# Configuración de JPA
+## Ajustar la estrategia DDL: Data Definition Language
+## create-drop: Crea y elimina las tablas al finalizar la aplicación
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Configuracion del nivel de registro de la aplicacion
+logging.level.web=DEBUG
