Unit Tests and Integration Tests for PaisControllerRest added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,45 @@
 # Establece el puerto del servicio
 server.port=8087
 
-## Configuración de la base de datos
+## Configuracion de la base de datos
 # Establece la URL de la base de datos
 spring.datasource.url=jdbc:postgresql://localhost:5432/curso_springboot
 # Establece el usuario de la base de datos
 spring.datasource.username=devdb
-# Establece la contraseña de la base de datos
+# Establece la contraseÃ±a de la base de datos
 spring.datasource.password=a1b2c3d4
 
-# Configuración de JPA
-## Ajustar la estrategia DDL: Data Definition Language
-## create-drop: Crea y elimina las tablas al finalizar la aplicación
-spring.jpa.hibernate.ddl-auto=create-drop
 
-# Configuracion del nivel de registro de la aplicacion
+
+## Configuracion de JPA (Java Persistence API)
+# Ajustamos la estrategia DDL (Data Definition Language)
+# Crea las tablas al arrancar la aplicacion y las elimina al pararla. (create-drop, create, update, validate, none)
+# create-drop: crea las tablas al arrancar la aplicacion y las elimina al pararla.
+# create: crea las tablas al arrancar la aplicacion.
+# update: crea las tablas al arrancar la aplicacion si no existen y las actualiza si existen.
+# validate: valida las tablas al arrancar la aplicacion si existen.
+# none: no crea ni valida las tablas al arrancar la aplicacion.
+spring.jpa.hibernate.ddl-auto=create-drop
+# Habilita transacciones de jpa mientras se renderiza la vista. (true, false)
+spring.jpa.open-in-view = true
+# Configuracion del dialecto de Hibernate para PostgreSQL (https://docs.jboss.org/hibernate/orm/5.4/javadocs/org/hibernate/dialect/package-summary.html)
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+## Configuracion de la aplicacion
+# Habilita o deshabilita las referencias circulares en la inyeccion de dependencias.
+# Cuando es 'true', se permiten referencias circulares; cuando es 'false', se lanzara una excepcion en caso de referencias circulares.
+spring.main.allow-circular-references=true
+
+
+## Configuracion de la visualizacion de las consultas SQL en la consola (no para produccion)
+# Habilita la visualizacion de las consultas SQL en la consola. (true, false)
+spring.jpa.show-sql=true
+
+
+## Configuracion del registro de depuracion (debug) de Spring y Hibernate (No para produccion)
+# Habilita el registro de Spring en nivel DEBUG: muestra las peticiones HTTP en la consola. (DEBUG, INFO, WARN, ERROR, FATAL, OFF)
 logging.level.web=DEBUG
+# Habilita el registro SQL de Hibernate en nivel DEBUG: muestra las consultas SQL en la consola. (trace, debug, info, warn, error, fatal, off)
+logging.level.org.hibernate.SQL=DEBUG
+# Habilita el registro de los parametros SQL de Hibernate en nivel debug: muestra los valores de los parametros en las consultas SQL. (trace, debug, info, warn, error, fatal, off)
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=debug
