feat(config): add env variable support to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,14 @@
-
-# Establece el puerto del servicio
-server.port=8087
+## Configuracion del servidor de aplicaciones
+# Cambiamos el puerto del servicio
+server.port=${SERVER_PORT:8080}
 
 ## Configuracion de la base de datos
-# Establece la URL de la base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/curso_springboot
-# Establece el usuario de la base de datos
-spring.datasource.username=devdb
-# Establece la contraseña de la base de datos
-spring.datasource.password=a1b2c3d4
-
-
+# Configuracion del proveedor de la base de datos y de la base de datos a utilizar.
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/curso_springboot}
+# Configuracion del usuario
+spring.datasource.username=${DB_USERNAME:devdb}
+# Configuracion de la contrasena
+spring.datasource.password=${DB_PASSWORD:a1b2c3d4}
 
 ## Configuracion de JPA (Java Persistence API)
 # Ajustamos la estrategia DDL (Data Definition Language)
@@ -20,7 +18,7 @@ spring.datasource.password=a1b2c3d4
 # update: crea las tablas al arrancar la aplicacion si no existen y las actualiza si existen.
 # validate: valida las tablas al arrancar la aplicacion si existen.
 # none: no crea ni valida las tablas al arrancar la aplicacion.
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 # Habilita transacciones de jpa mientras se renderiza la vista. (true, false)
 spring.jpa.open-in-view = true
 # Configuracion del dialecto de Hibernate para PostgreSQL (https://docs.jboss.org/hibernate/orm/5.4/javadocs/org/hibernate/dialect/package-summary.html)
