feat(security): add support to Oauth 2 with JWT tokens (Password Credentials flow)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-## Configuracion del servidor de aplicaciones
+# Configuracion del servidor de aplicaciones
+
 # Cambiamos el puerto del servicio
 server.port=${SERVER_PORT:8080}
 
-## Configuracion de la base de datos
+# Configuracion de la base de datos
+
 # Configuracion del proveedor de la base de datos y de la base de datos a utilizar.
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/curso_springboot}
 # Configuracion del usuario
@@ -40,3 +42,24 @@ logging.level.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 # Habilita el registro de los parametros SQL de Hibernate en nivel debug: muestra los valores de los parametros en las consultas SQL. (trace, debug, info, warn, error, fatal, off)
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=debug
+
+# Configuracion de la seguridad de la aplicacion con Keycloak
+
+# Variable de entorno para la URL de Keycloak (por defecto es http://host.docker.internal:8080 que es la direccion de keycloak en docker)
+jwt.auth.converter.resource-id=frontend-pais
+# Variable de entorno para el atributo del token que contiene el nombre de usuario (por defecto es preferred_username)
+jwt.auth.converter.principle-attribute=preferred_username
+# Logueo de keycloak en nivel DEBUG (DEBUG, INFO, WARN, ERROR, FATAL, OFF)
+logging.level.org.keycloak = DEBUG
+# Configuracion de keycloak para el issuer-uri que es la URL de keycloak para el realm de la aplicacion
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_URL:http://host.docker.internal:8080}/realms/paisesapprealm
+# Configuracion de keycloak para el jwk-set-uri que es la URL de keycloak para obtener las claves publicas usadas para validar el token
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_URL:http://host.docker.internal:8080}/realms/paisesapprealm/protocol/openid-connect/certs
+# Configuracion de keycloak para el audience que es el cliente que se espera que consuma el token
+logging.level.org.springframework.security=TRACE
+# Logueo de las peticiones HTTP en nivel TRACE (TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF)
+logging.level.org.springframework.web.client.RestTemplate=TRACE
+# Logueo de los servlets (el dispatcher es el que maneja las peticiones HTTP) en nivel TRACE (TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF)
+logging.level.org.springframework.web.servlet.DispatcherServlet=TRACE
+# Logueo los detalles de las peticiones HTTP en nivel TRACE (TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF)
+spring.mvc.log-request-details=true
